--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,11 @@
 
 *.pydevproject
 .project
+.metadata
+.gradle
 bin/
+tmp/
+target/
 *.tmp
 *.bak
 *.swp
@@ -13,3 +17,15 @@ local.properties
 .classpath
 .settings/
 .loadpath
+
+# External tool builders
+.externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# CDT-specific
+.cproject
+
+# PDT-specific
+.buildpath
